Wrote README and updated app icons

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
-    "displayName": "stardew-tracker"
+    "displayName": "stardew-tracker",
+    "dependencies": {
+        "cordova-android": "7.1.4"
+    }
 }
